log
Sun, Mar 23, 2025  6:53:38 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
3f6cb15
Sun, Mar 23, 2025  6:56:15 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
b1667e8
Sun, Mar 23, 2025  7:06:22 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
2d5c2ad
Sun, Mar 23, 2025  7:09:26 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
9a042bf
Sun, Mar 23, 2025  7:21:28 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
b82a202
vi.,  4 de abr. de 2025  9:40:55: 
 tests:  0|5
total_score: 0/70
6650370
vi.,  4 de abr. de 2025  9:57:27: 
 tests:  0|5
total_score: 0/70
9532cb1
vi.,  4 de abr. de 2025 10:07:06: 
 exercises.c | 50 +++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 47 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:4: error: this 'while' clause does not guard... [-Werror=misleading-indentation]
    while(elemento !=NULL);{
    ^~~~~
exercises.c:62:27: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'while'
    while(elemento !=NULL);{
                           ^
exercises.c: In function 'parentesisBalanceados':
exercises.c:117:17: error: passing argument 1 of 'get_size' from incompatible pointer type [-Werror=incompatible-pointer-types]
    if (get_size(cadena)%2 != 0) return 0;
                 ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:35:5: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 int get_size(List *L);
     ^~~~~~~~
In file included from test.c:5:0:
exercises.c:119:32: error: passing argument 1 of 'get_size' from incompatible pointer type [-Werror=incompatible-pointer-types]
    for(int k=0 ; k < (get_size(cadena)) ; k++){
                                ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:35:5: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 int get_size(List *L);
     ^~~~~~~~
In file included from test.c:5:0:
exercises.c:121:56: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       if (c == '(' || c == '[' || c == '{') push(pila, c);
                                                        ^
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:125:34: error: comparison between pointer and integer [-Werror]
          if (c == ')' && topElem != '(') return 0;
                                  ^~
exercises.c:126:34: error: comparison between pointer and integer [-Werror]
          if (c == ']' && topElem != '[') return 0;
                                  ^~
exercises.c:127:34: error: comparison between pointer and integer [-Werror]
          if (c == '}' && topElem != '{') return 0;
                                  ^~
exercises.c:131:25: error: passing argument 1 of 'top' makes pointer from integer without a cast [-Werror=int-conversion]
    int resultado = (top(pila == NULL));
                         ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int'
 void *top(Stack *stack) { return first(stack); }
       ^~~
In file included from test.c:5:0:
exercises.c:131:20: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int resultado = (top(pila == NULL));
                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
67bbb5c
vi.,  4 de abr. de 2025 10:08:01: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:117:17: error: passing argument 1 of 'get_size' from incompatible pointer type [-Werror=incompatible-pointer-types]
    if (get_size(cadena)%2 != 0) return 0;
                 ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:35:5: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 int get_size(List *L);
     ^~~~~~~~
In file included from test.c:5:0:
exercises.c:119:32: error: passing argument 1 of 'get_size' from incompatible pointer type [-Werror=incompatible-pointer-types]
    for(int k=0 ; k < (get_size(cadena)) ; k++){
                                ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:35:5: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 int get_size(List *L);
     ^~~~~~~~
In file included from test.c:5:0:
exercises.c:121:56: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       if (c == '(' || c == '[' || c == '{') push(pila, c);
                                                        ^
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:125:34: error: comparison between pointer and integer [-Werror]
          if (c == ')' && topElem != '(') return 0;
                                  ^~
exercises.c:126:34: error: comparison between pointer and integer [-Werror]
          if (c == ']' && topElem != '[') return 0;
                                  ^~
exercises.c:127:34: error: comparison between pointer and integer [-Werror]
          if (c == '}' && topElem != '{') return 0;
                                  ^~
exercises.c:131:25: error: passing argument 1 of 'top' makes pointer from integer without a cast [-Werror=int-conversion]
    int resultado = (top(pila == NULL));
                         ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int'
 void *top(Stack *stack) { return first(stack); }
       ^~~
In file included from test.c:5:0:
exercises.c:131:20: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int resultado = (top(pila == NULL));
                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
e16d537
vi.,  4 de abr. de 2025 10:16:05: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:117:17: error: passing argument 1 of 'get_size' makes pointer from integer without a cast [-Werror=int-conversion]
    if (get_size(*cadena)%2 != 0) return 0;
                 ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:35:5: note: expected 'List * {aka struct List *}' but argument is of type 'char'
 int get_size(List *L);
     ^~~~~~~~
In file included from test.c:5:0:
exercises.c:119:32: error: passing argument 1 of 'get_size' from incompatible pointer type [-Werror=incompatible-pointer-types]
    for(int k=0 ; k < (get_size(cadena)) ; k++){
                                ^~~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:35:5: note: expected 'List * {aka struct List *}' but argument is of type 'char *'
 int get_size(List *L);
     ^~~~~~~~
In file included from test.c:5:0:
exercises.c:121:56: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       if (c == '(' || c == '[' || c == '{') push(pila, c);
                                                        ^
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:125:34: error: comparison between pointer and integer [-Werror]
          if (c == ')' && topElem != '(') return 0;
                                  ^~
exercises.c:126:34: error: comparison between pointer and integer [-Werror]
          if (c == ']' && topElem != '[') return 0;
                                  ^~
exercises.c:127:34: error: comparison between pointer and integer [-Werror]
          if (c == '}' && topElem != '{') return 0;
                                  ^~
exercises.c:131:25: error: passing argument 1 of 'top' makes pointer from integer without a cast [-Werror=int-conversion]
    int resultado = (top(pila == NULL));
                         ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int'
 void *top(Stack *stack) { return first(stack); }
       ^~~
In file included from test.c:5:0:
exercises.c:131:20: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int resultado = (top(pila == NULL));
                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
b4e727e
